--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,26 @@
-$red: blue;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap');
+@import '~normalize.css';
+
+@import 'header';
+@import 'formula';
+@import 'table';
+@import 'toolbar';
+@import 'dashboard';
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body{
-    background-color: $red;
+    font-family: 'Roboto' , sans-serif;
+    font-size: 12px;
+}
+.excel{
+    position: relative;
+    max-width: 100%;
+    height: 100%;
+    
+    color: #888;
 }
