--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -10,16 +10,18 @@
     flex-direction: column;
     max-width: 100%;
     height: 100%;
-  overflow-x: scroll;
+    overflow-x: scroll;
 
     .row {
         display: flex;
-        
+        flex-direction: row;
+        min-height: 20px;
 
         &-info {
             display: flex;
             align-items: center;
             justify-content: center;
+            min-width: 40px;
             width: 40px;
             height: 20px;
             background-color: #f8f9fa;
@@ -43,7 +45,7 @@
             border: 1px solid $borderColor;
             border-top: none;
             border-left: none;
-           
+
         }
 
         .cell {
@@ -57,11 +59,13 @@
             align-items: center;
             color: black;
             padding-left: 3px;
-            
-            &:active, :focus{
+
+            &:active,
+            :focus {
                 outline: none;
             }
-            &.selected{
+
+            &.selected {
                 border: none;
                 outline: 2px solid #3c74ff;
                 z-index: 2;
