--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -9,15 +9,42 @@
     display: flex;
     flex-direction: column;
     max-width: 100%;
-    height: 100%;
+    height: auto;
     overflow-x: scroll;
 
+    .col-resizer, .row-resizer{
+        position: absolute;
+        opacity: 0;
+        background-color: #3c74ff;
+        z-index: 500;
+        &:hover{
+            opacity: 1 !important;
+        }
+
+    }
+    .col-resizer{
+        right: 0;
+        top: 0;
+        bottom: 0;
+        width: 3px;
+        cursor: col-resize;
+    }
+    .row-resizer{
+        right: 0;
+        left: 0;
+        bottom: 0;
+        height: 3px;
+        cursor: row-resize;
+       
+    }
     .row {
+        user-select: none;
         display: flex;
         flex-direction: row;
         min-height: 20px;
 
         &-info {
+            position: relative;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -35,6 +62,8 @@
         }
 
         .column {
+            user-select: none;
+            position: relative;
             display: flex;
             justify-content: center;
             width: 65px;
@@ -50,7 +79,7 @@
 
         .cell {
             width: 65px;
-            height: 20px;
+            height: 100%;
             border: 1px solid #e2e3e3;
             border-top: none;
             border-left: 0;
